basis cleanup (Phase 1), license change to CDDL 1.1, minor bug fixes

--- a/plugin.cfg
+++ b/plugin.cfg
@@ -1,18 +1,18 @@
 [AUTHOR]
-NAME=Christian Woerstenfeld
-EMAIL=git@loxberry.woerstenfeld.de
+NAME=Jens Elkner
+EMAIL=jel+loxberry@cs.ovgu.de
 
 [PLUGIN]
-VERSION=v2018.10.28
+VERSION=1.0.0
 
-NAME=cam-connect
-FOLDER=cam-connect
-TITLE=Cam-Connect
+NAME=cam-snap
+FOLDER=cam-snap
+TITLE=Cam Snapshooter
 
 [AUTOUPDATE]
 AUTOMATIC_UPDATES=true
-RELEASECFG=https://raw.githubusercontent.com/Woersty/LoxBerry-Plugin-cam-connect/master/release.cfg
-PRERELEASECFG=https://raw.githubusercontent.com/Woersty/LoxBerry-Plugin-cam-connect/master/prerelease.cfg
+RELEASECFG=https://raw.githubusercontent.com/jelmd/lbp.cam-snap/master/release.cfg
+PRERELEASECFG=https://raw.githubusercontent.com/jelmd/lbp.cam-snap/master/prerelease.cfg
 
 [SYSTEM]
 REBOOT=false
