--- a/prerelease.cfg
+++ b/prerelease.cfg
@@ -6,10 +6,10 @@
 # If your plugin offers automatic updates, please enable the following option.
 
 # Version of the new release
-VERSION=v2018.10.28
+VERSION=v1.0.0
 
 # Download URL of the ZIP Archive
-ARCHIVEURL=https://github.com/Woersty/LoxBerry-Plugin-cam-connect/archive/v2018.10.28.zip
+ARCHIVEURL=https://github.com/jelmd/lbp.cam-snap/archive/v1.0.0.zip
 
 # URL for further information about this release
-INFOURL=https://github.com/Woersty/LoxBerry-Plugin-cam-connect/releases/tag/v2018.10.28
+INFOURL=https://github.com/jelmd/lbp.cam-snap/releases/tag/v1.0.0
