--- a/plugin.cfg
+++ b/plugin.cfg
@@ -1,23 +1,23 @@
 [AUTHOR]
 NAME=Jens Elkner
-EMAIL=jel+loxberry@cs.ovgu.de
+EMAIL=jel+snap-cam@ehsbe.com
 
 [PLUGIN]
-VERSION=1.0.0
+VERSION=1.1.0
 
-NAME=cam-snap
-FOLDER=cam-snap
-TITLE=Cam Snapshooter
+NAME=snap-cam
+FOLDER=snap-cam
+TITLE=Snapshot Camera 
 
 [AUTOUPDATE]
 AUTOMATIC_UPDATES=true
-RELEASECFG=https://raw.githubusercontent.com/jelmd/lbp.cam-snap/master/release.cfg
-PRERELEASECFG=https://raw.githubusercontent.com/jelmd/lbp.cam-snap/master/prerelease.cfg
+RELEASECFG=https://raw.githubusercontent.com/jelmd/lbp.snap-cam/master/release.cfg
+PRERELEASECFG=https://raw.githubusercontent.com/jelmd/lbp.snap-cam/master/prerelease.cfg
 
 [SYSTEM]
 REBOOT=false
 INTERFACE=2.0
-LB_MINIMUM=1.0.2
+LB_MINIMUM=1.2
 LB_MAXIMUM=false
 ARCHITECTURE="raspberry,x86"
 CUSTOM_LOGLEVELS=true
