--- a/prerelease.cfg
+++ b/prerelease.cfg
@@ -2,14 +2,14 @@
 # This file is used if you would like to provide automatic updates. Put
 # this file into your repo and give a link to this file in your plugin.cfg
 # If you would like to release an update, edit VERSION here and give
-# the donwload link here
+# the download link here
 # If your plugin offers automatic updates, please enable the following option.
 
 # Version of the new release
-VERSION=v1.0.0
+VERSION=v1.1.0.2.0
 
 # Download URL of the ZIP Archive
-ARCHIVEURL=https://github.com/jelmd/lbp.cam-snap/archive/v1.0.0.zip
+ARCHIVEURL=https://github.com/jelmd/lbp.snap-cam/archive/v1.1.0.2.0.zip
 
 # URL for further information about this release
-INFOURL=https://github.com/jelmd/lbp.cam-snap/releases/tag/v1.0.0
+INFOURL=https://github.com/jelmd/lbp.snap-cam/releases/tag/v1.1.0.2.0
