--- a/release.cfg
+++ b/release.cfg
@@ -6,10 +6,10 @@
 # If your plugin offers automatic updates, please enable the following option.
 
 # Version of the new release
-VERSION=1.0.0
+VERSION=1.1.0
 
 # Download URL of the ZIP Archive
-ARCHIVEURL=https://github.com/jelmd/lbp.cam-snap/archive/v1.0.0.zip
+ARCHIVEURL=https://github.com/jelmd/lbp.snap-cam/archive/v1.1.0.zip
 
 # URL for further information about this release
-INFOURL=https://github.com/jelmd/lbp.cam-snap/releases/tag/v1.0.0
+INFOURL=https://github.com/jelmd/lbp.snap-cam/releases/tag/v1.1.0
